# buff_activator

./: README.md  main.cpp  recoder.cpp  resolver_calibration.cpp  script.py  start.sh
config/: debug_config.yaml  robot_param.yaml
tdt_camera/: CMakeLists.txt  tdtcamera.cpp  tdtcamera.h
tdt_camera/hikvisioncam/: CMakeLists.txt  hikvisioncam.cpp  hikvisioncam.h
tdt_camera/hikvisioncam/libhikvision/ImageProcess/: CameraParams.h  MvDeviceBase.h  TlFactory.h
tdt_camera/hikvisioncam/libhikvision/demo/: README-CH  README-EN
tdt_camera/hikvisioncam/libhikvision/demo/32/Display/: Display.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/ForceIP/: ForceIP.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/GrabImage/: GrabImage.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/GrabMultipleCamera/: Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/Grab_ImageCallback/: Grab_ImageCallback.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/ImageProcess/: ImageProcess.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/ReconnectDemo/: Makefile  ReconnectDemo.cpp
tdt_camera/hikvisioncam/libhikvision/demo/32/SetIO/: Makefile  SetIO.cpp
tdt_camera/hikvisioncam/libhikvision/demo/32/SetParam/: Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/Trigger_Image/: Makefile
tdt_camera/hikvisioncam/libhikvision/demo/32/Trigger_ImageCallback/: Makefile
tdt_camera/hikvisioncam/libhikvision/demo/64/Display/: Makefile
tdt_camera/hikvisioncam/libhikvision/demo/64/ForceIP/: Makefile
tdt_camera/hikvisioncam/libhikvision/demo/64/GrabImage/: CMakeLists.txt  GrabImage.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/demo/64/GrabMultipleCamera/: GrabMultipleCamera.cpp  Makefile
tdt_camera/hikvisioncam/libhikvision/doc/: HikCameraNode.xlsx  Machine Vision Camera SDK Programming Manual_CH.chm  Machine Vision Camera SDK Programming Manual_EN.chm
tdt_camera/uvccam/: CMakeLists.txt  uvccam.cpp  uvccam.h
tdt_camera/uvccam/libjpeg-turbo/lib64/: libjpeg.so.62  libturbojpeg.so.0
tdt_camera/uvccam/libjpeg-turbo/lib64/pkgconfig/: libjpeg.pc  libturbojpeg.pc
(+35 files in other folders)
